Revision history for AnyEvent-Proc

{{$NEXT}}
 - allow scalarref for pull()

0.102 2014-12-04
 - new method "pull"
 - remove subroutine prototypes
 - allow additional descriptors via new functions reader() and writer()
 - tidy up code

 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]

0.101 2014-11-27
 - new function "run"
 - update tests
 - update documentation
 - debug messages
 - signal defaults to TERM
 - fix issue with AnyEvent::Impl::Perl
 - improve tests

0.100 2014-11-26
 - change version format

0.1.0 2014-11-26
 - first release
